--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 margin-top: 40px;
             }
             p { 
-                font-size: 5em; 
+                font-size: 3em; 
                 margin: 0; 
                 line-height: 1; 
                 color: #b4d455; 
@@ -70,18 +70,65 @@
                 text-shadow : 1px 1px 1px #000;
                 color : #b4d455;
                 line-height: 1.5;
+                left: auto;
             }
             .img { 
-                width: 200px; 
-                height: 200px; 
+                width: 100px; 
+                height: 100px; 
                 margin: 10px auto; 
                 display: block; 
-                border-radius: 200px;
+                border-radius: 400px;
                 background-color: #000;
                 background-image: url(http://www.gravatar.com/avatar/f850a3977ad29221ed108f319c7fe49c.png?size=250);
                 background-position: center center;
                 box-shadow: 0 0 50px #999; 
+                background-size: 120%;
+                position: relative;
             }
+            /* animations */
+            .cssanimations .img {
+                top: -1000px;
+                -webkit-transform: scale(0);
+                -webkit-transition: all 1s ease-in-out; 
+                -webkit-backface-visibility: hidden; 
+                -webkit-perspective: 1000;
+            }
+            .cssanimations .deploy .img {
+                top: 0;
+                -webkit-transform: scale(1);
+            }
+            .cssanimations .word {
+                -webkit-transition: all 1s ease-in-out;
+                position: relative;
+            }
+            .cssanimations .word1 {
+                left: -1000px;
+            }
+            .cssanimations .word2 {
+                left: 1000px;
+            }
+            .cssanimations .deploy .word1,
+            .cssanimations .deploy .word2 {
+                left: auto;
+            }
+            .cssanimations p {
+                position: relative;
+                bottom: -500px;
+                -webkit-transition: all 1s ease-in-out;
+            }
+            .cssanimations .deploy p {
+                bottom: auto;
+            }
+            .cssanimations ul {
+                bottom: -1000px;
+                -webkit-transform: scale(0);
+            }
+            .cssanimations .deploy ul {
+                bottom: 0;
+                -webkit-transform: scale(1);
+                -webkit-transition: all 1.5s ease-in-out;
+            }
+            /* mediaqueries */
             @media all and (min-width: 530px) {
                 body {
                     font-size: 1.5em;
@@ -90,7 +137,11 @@
                     font-size: 6em;
                 }
                 .wrapper {
-                    width: 420px;
+                    width: 500px;
+                }
+                .img {
+                    width: 200px; 
+                    height: 200px; 
                 }
                 .me {
                     position: absolute;
@@ -100,16 +151,21 @@
                     transform: rotate(-10deg);
                 }
             }
+            @media all and (min-width: 768px) {
+                .img {
+                    width: 300px;
+                    height: 300px;
+                }
+            }
         </style>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     </head>
     <body>
 
         <div class="wrapper">
             <div class="img"></div>
-
             <h1>Del Harvey</h1>
-            <p>Developer</p>
-
+            <p>Web Developer</p>
             <ul class="list-inline">
                 <li class="me">Stalk Me</li>
                 <li><a href="//facebook.com/lotsofcode" target="_blank">facebook</a></li>
@@ -118,8 +174,28 @@
                 <li><a href="//koding.com/lotsofcode" target="_blank">koding</a></li>
                 <li><a href="//gplus.to/lotsofcode" target="_blank">google+</a></li>
             </ul>
-
         </div>
+
+        <script>
+            ;(function(window, undefined) {
+                var body, h1, words, i = 1, html = '';
+
+                body = document.querySelector('body');
+
+                h1 = body.querySelector('h1');
+                words = h1.innerHTML.split(' ');
+
+                for (word in words) {
+                    html += '<span class="word word' + i + '">' + words[word] + '</span> ';
+                    i++;
+                }
+                h1.innerHTML = html;
+
+                window.setTimeout(function() {
+                    body.className += ' deploy';
+                }, 1000);
+            })(window);
+        </script>
 
     </body>
 </html>
