Added more spacing to the list on smaller devices

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 /*width: 80%;*/
                 margin: 40px auto;
             }
+            .list-inline > li {
+                padding: 0 10px;
+            }
             ul li { 
                 vertical-align: middle; 
             }
@@ -149,6 +152,9 @@
                     top: -20px;
                     -webkit-transform: rotate(-10deg);
                     transform: rotate(-10deg);
+                }
+                .list-inline > li {
+                    padding: 0 5px;
                 }
             }
             @media all and (min-width: 768px) {
