--- a/index.html
+++ b/index.html
@@ -105,44 +105,44 @@
                 position: relative;
             }
             /* animations */
-            .cssanimations .img {
+            .img {
                 top: -1000px;
                 -webkit-transform: scale(0);
                 -webkit-transition: all 1s ease-in-out;
                 -webkit-backface-visibility: hidden;
                 -webkit-perspective: 1000;
             }
-            .cssanimations .steady .img {
+            .steady .img {
                 top: 0;
                 -webkit-transform: scale(1);
             }
-            .cssanimations .word {
+            .word {
                 -webkit-transition: all 1s ease-in-out;
                 position: relative;
             }
-            .cssanimations .ready .word1 {
+            .ready .word1 {
                 left: -1000px;
             }
-            .cssanimations .ready .word2 {
+            .ready .word2 {
                 left: 1000px;
             }
-            .cssanimations .steady .word1,
-            .cssanimations .steady .word2 {
+            .steady .word1,
+            .steady .word2 {
                 left: 0;
             }
-            .cssanimations p {
+            p {
                 position: relative;
                 bottom: -500px;
                 -webkit-transition: all 1s ease-in-out;
             }
-            .cssanimations .steady p {
+            .steady p {
                 bottom: 0;
             }
-            .cssanimations ul {
+            ul {
                 bottom: -100px;
                 -webkit-transform: scale(0);
             }
-            .cssanimations .go ul {
+            .go ul {
                 bottom: 0;
                 -webkit-transform: scale(1);
                 -webkit-transition: all 1s ease-in-out;
@@ -173,6 +173,7 @@
                     padding: 0 5px;
                 }
             }
+
             @media all and (min-width: 768px) {
                 .img {
                     width: 300px;
@@ -191,10 +192,30 @@
               padding-left: 5px;
             }
 
+            .lost {
+              position: absolute;
+              background: #000;
+              z-index: 10;
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
+              padding: 20% 0;
+              overflow: hidden;
+            }
+
+            .lost a {
+              text-decoration: underline;
+            }
+
         </style>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     </head>
     <body>
+
+        <!--[if lt IE 10]>
+          <p class="lost">Clealy you are lost ... <a href="http://browsehappy.com/">do the web a favour</a></p>
+        <![endif]-->
+
         <div class="wrapper">
             <div class="img"></div>
             <h1>Del Harvey</h1>
