--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                     -webkit-transition: all 1s ease-in-out;
                     position: relative;
                 }
-                .ready .word1 {
+                .word1 {
                     left: -1000px;
                 }
-                .ready .word2 {
+                .word2 {
                     left: 1000px;
                 }
                 .steady .word1,
