--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                 .word2 {
                     left: 1000px;
                 }
-                .steady .word1,
-                .steady .word2 {
+                /*.steady*/ .word1,
+                /*.steady*/ .word2 {
                     left: 0;
                 }
 
@@ -158,7 +158,7 @@
                     bottom: -500px;
                     -webkit-transition: all 1s ease-in-out;
                 }
-                .steady p {
+                /*.steady*/ p {
                     bottom: 0;
                 }
 
@@ -169,7 +169,7 @@
                     -webkit-backface-visibility: hidden;
                     -webkit-perspective: 1000;
                 }
-                .steady .img {
+                /*.steady*/ .img {
                   top: 0;
                   -webkit-transform: scale(1);
                 }
@@ -178,10 +178,31 @@
                   bottom: -100px;
                   -webkit-transform: scale(0);
                 }
-                .go ul {
+                /*.go*/ ul {
                   bottom: 0;
                   -webkit-transform: scale(1);
                   -webkit-transition: all 1s ease-in-out;
+                }
+            }
+
+            @media all and (min-width: 768px) and (min-height: 500px) {
+                .wrapper {
+                    border-radius: 100%;
+                    width: 500px;
+                    margin: 0;
+                    height: 600px;    
+                    position: absolute;
+                    top: 50%;
+                    margin-top: -300px;
+                    left: 50%;
+                    margin-left: -250px;
+                }
+                .img {
+                    box-shadow: none;
+                    border: 1px solid #fff;
+                }
+                ul {
+                    margin: 60px auto 0;
                 }
             }
 
@@ -194,6 +215,10 @@
               display: inline-block;
               padding-right: 5px;
               padding-left: 5px;
+            }
+
+            .list-inline > li.me {
+                display: block;
             }
 
             .lost {
@@ -223,9 +248,9 @@
         <div class="wrapper">
             <div class="img"></div>
             <h1>Del Harvey</h1>
-            <p>Web Developer</p>
+            <p>Front End Developer</p>
             <ul class="list-inline">
-                <li class="me">Stalk Me</li>
+                <li class="me">@lotsofcode</li>
                 <li><a href="//facebook.com/lotsofcode" target="_blank">facebook</a></li>
                 <li><a href="//twitter.com/lotsofcode" target="_blank">twitter</a></li>
                 <li><a href="//github.com/lotsofcode" target="_blank">github</a></li>
@@ -234,25 +259,25 @@
             </ul>
         </div>
         <script>
-            ;(function(window, undefined) {
-                var body, h1, words, i = 1, html = '';
-                body = document.querySelector('body');
-                h1 = body.querySelector('h1');
-                words = h1.innerHTML.split(' ');
-                for (var i = 0; i < words.length; i++) {
-                    html += '<span class="word word' + (i + 1) + '">' + words[i] + '</span> ';
-                }
-                h1.innerHTML = html;
-                body.className += ' ready';
-                document.addEventListener('DOMContentLoaded', function(){
-                  window.setTimeout(function() {
-                      body.className += ' steady';
-                      window.setTimeout(function() {
-                          body.className += ' go';
-                      }, 1000);
-                  }, 1000);
-                });
-            })(window);
+            // ;(function(window, undefined) {
+                // var body, h1, words, i = 1, html = '';
+                // body = document.querySelector('body');
+                // h1 = body.querySelector('h1');
+                // words = h1.innerHTML.split(' ');
+                // for (var i = 0; i < words.length; i++) {
+                //     html += '<span class="word word' + (i + 1) + '">' + words[i] + '</span> ';
+                // }
+                // h1.innerHTML = html;
+                // body.className += ' ready';
+                // document.addEventListener('DOMContentLoaded', function(){
+                //   window.setTimeout(function() {
+                //       body.className += ' steady';
+                //       window.setTimeout(function() {
+                //           body.className += ' go';
+                //       }, 1000);
+                //   }, 1000);
+                // });
+            // })(window);
         </script>
     </body>
 </html>
