Fixed browserhappy typo and added en local to query string

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
             .lost {
               position: absolute;
-              background: #000;
+              background-image: url(binding_dark.png);
               z-index: 10;
               width: 100%;
               height: 100%;
@@ -231,6 +231,7 @@
               left: 0;
               padding: 20% 0;
               overflow: hidden;
+              text-shadow: none;
             }
 
             .lost a {
@@ -242,7 +243,7 @@
     <body>
 
         <!--[if lt IE 10]>
-          <p class="lost">Clealy you are lost ... <a href="http://browsehappy.com/">do the web a favour</a></p>
+          <p class="lost">Clearly you're lost ... <a href="http://browsehappy.com/?locale=en">do the web a favour</a></p>
         <![endif]-->
 
         <div class="wrapper">
