Fixed font sizes on mobile

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Del Harvey, Web Developer based in Northampton</title>
+        <title>Del Harvey, Front End Developer based in Northampton</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='http://fonts.googleapis.com/css?family=Mouse+Memoirs' rel='stylesheet' type='text/css'>
@@ -35,7 +35,7 @@
                 text-align: center;
             }
             h1 {
-                font-size: 4em;
+                font-size: 3em;
                 color: #fff;
                 text-shadow: 1px 1px 1px #000, 0 0 150px #999;
                 letter-spacing: 1px;
@@ -46,7 +46,7 @@
                 font-weight: 500;
             }
             p {
-                font-size: 3em;
+                font-size: 2em;
                 margin: 0;
                 line-height: 1;
                 color: #b4d455;
@@ -82,7 +82,7 @@
             }
             .me {
                 color: #fff;
-                font-size: 2.2em;
+                font-size: 1.4em;
                 text-transform: uppercase;
                 letter-spacing: 2px;
                 vertical-align: middle;
@@ -123,6 +123,7 @@
                     position: absolute;
                     left: -5%;
                     top: -20px;
+                    font-size: 2.2em;
                     -webkit-transform: rotate(-10deg);
                     transform: rotate(-10deg);
                 }
